[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=1]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Parque.gd" type="Script" id=3]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=4]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/a_parque.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 374.001

[node name="Parque" type="Node2D" groups=["conReserva", "ediParque", "ediffice", "porton"]]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reserva" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Reserva"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 14
__meta__ = {
"_edit_lock_": true
}

[node name="Rosa" type="Sprite" parent="Imagen"]
position = Vector2( 1, -87 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 5 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 2 )]
position = Vector2( -30, 22 )

[node name="Plantador" type="Timer" parent="."]
one_shot = true

[node name="Florista" type="Timer" parent="."]
one_shot = true

[node name="TimeArea" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Conteo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Huevo" type="Timer" parent="."]
one_shot = true

[node name="Sonido" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 6 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="Imagen/Actividad" to="." method="_on_Actividad_button_down"]
[connection signal="timeout" from="Plantador" to="." method="_on_Plantador_timeout"]
[connection signal="timeout" from="Florista" to="." method="_on_Florista_timeout"]
[connection signal="timeout" from="TimeArea" to="." method="_on_TimeArea_timeout"]
[connection signal="timeout" from="Conteo" to="." method="_on_Conteo_timeout"]
[connection signal="timeout" from="Huevo" to="." method="_on_Huevo_timeout"]
